--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   sqflite: ^2.3.0
   uuid: ^3.0.7
   weather: ^3.1.1
+  geolocator: ^12.0.0
+  loading_animation_widget: ^1.2.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
